Reworked database to be more flexible for future event types. Removed EventType enum as a result. Changed links for individual calculators.

--- a/src/main/webapp/WEB-INF/calculators/calcHeader.html
+++ b/src/main/webapp/WEB-INF/calculators/calcHeader.html
@@ -1,12 +1,10 @@
 <table border="1">
 	<tr>
-		<td><a href="RewardCalculator?event=SoulCrystal">Soul Crystal
+		<td><a href="RewardCalculator?event=1">Soul Crystal
 				Calculator</a></td>
-		<td><a href="RewardCalculator?event=MountWhip">Mount Whip
-				Calculator</a></td>
-		<td><a href="RewardCalculator?event=Mahra">Mahra Calculator</a></td>
-		<td><a href="RewardCalculator?event=Sepulcrum">Seuplcrum
-				Calculator</a></td>
+		<td><a href="RewardCalculator?event=2">Mount Whip Calculator</a></td>
+		<td><a href="RewardCalculator?event=3">Mahra Calculator</a></td>
+		<td><a href="RewardCalculator?event=4">Seuplcrum Calculator</a></td>
 	</tr>
 </table>
 <p>
