Imported JSTL tag libraries from maven. Updated EventDAO, RewardCalculator to retrieve data from new database design. Fixed spelling error on "Sepulcrum" in calcHeader.html Modified reimburseEvent.jsp to use JSTL, not yet fully implemented.

--- a/src/main/webapp/WEB-INF/calculators/calcHeader.html
+++ b/src/main/webapp/WEB-INF/calculators/calcHeader.html
@@ -1,10 +1,11 @@
 <table border="1">
 	<tr>
-		<td><a href="RewardCalculator?event=1">Soul Crystal
+		<td><a href="RewardCalculator?event=SC">Soul Crystal
 				Calculator</a></td>
-		<td><a href="RewardCalculator?event=2">Mount Whip Calculator</a></td>
-		<td><a href="RewardCalculator?event=3">Mahra Calculator</a></td>
-		<td><a href="RewardCalculator?event=4">Seuplcrum Calculator</a></td>
+		<td><a href="RewardCalculator?event=MountWhip">Mount Whip
+				Calculator</a></td>
+		<td><a href="RewardCalculator?event=Mahra">Mahra Calculator</a></td>
+		<td><a href="RewardCalculator?event=Sep">Sepulcrum Calculator</a></td>
 	</tr>
 </table>
 <p>
